--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,8 @@ title: "ISSS624"
 Welcome to ISS624 Geospatial Analytics Applications!
 
 In this webpage, we are going to share with you my learning journey for geospatial analytics.
+
+Starting from:
+
+1.  Geospatial Data Wrangling with R
+2.  Chropleth Mapping with R
