--- a/Hands-On_Ex/Hands-On_Ex1/Hands-On_Ex1B.qmd
+++ b/Hands-On_Ex/Hands-On_Ex1/Hands-On_Ex1B.qmd
@@ -190,93 +190,192 @@ tm_shape(mpsz_pop2020)+
   tm_borders(alpha = 0.5)
 ```
 
-### Creating a simple feature data frame from an aspatial data frame
+### Plotting choropleth map with custom breaks
 
-Converting listing data frame into a simple feature data frame
+Displaying descriptive statistics of ECONOMY ACTIVE field
 
 ```{r}
-
+summary(mpsz_pop2020$`ECONOMY ACTIVE`)
 ```
 
 \
-Examining the content of the newly created simple feature data frame
+Setting break points at 3K, 4K, 5K, 6K, min and max at 0 and 100K
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE",
+          breaks = c(0, 3000, 4000, 5000, 6000, 100000))+
+  tm_borders(alpha = 0.5)
 ```
 
-## Geoprocessing with sf package
-
-### Buffering
-
-Computing a five-meter buffers around cycling paths
+### Colour Scheme
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE",
+          n = 6,
+          style = "quantile",
+          palette = "Blues") +
+  tm_borders(alpha = 0.5)
 ```
 
-Calculating the area of the buffers
+Reversing the colour shading with "-" prefix
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE",
+          style = "quantile",
+          palette = "-Greens") +
+  tm_borders(alpha = 0.5)
 ```
 
-Deriving total land involved using sum() of Base R
+### Map layouts
+
+Combining all map elements into a cohesive map, which includes objects, title, scale bar, compass, margins and aspect ratios
+
+#### Map legend
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE", 
+          style = "jenks", 
+          palette = "Blues", 
+          legend.hist = TRUE, 
+          legend.is.portrait = TRUE,
+          legend.hist.z = 0.1) +
+  tm_layout(main.title = "Distribution of Economy Active Ratio by planning subzone \n(Jenks classification)",
+            main.title.position = "center",
+            main.title.size = 1,
+            legend.height = 0.45, 
+            legend.width = 0.35,
+            legend.outside = FALSE,
+            legend.position = c("right", "bottom"),
+            frame = FALSE) +
+  tm_borders(alpha = 0.5)
 ```
 
-### Point-in-polygon count
-
-Performing two operations at one go: (1) identifying pre-schools located inside each Planning Subzone using st_intersect(); (2) calculating number of pre-schools that fall inside each planning subzone using length()
-
-*\*Warning: **Not** to be confused with st_intersection()*
+#### Map style
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE", 
+          style = "quantile", 
+          palette = "-Greens") +
+  tm_borders(alpha = 0.5) +
+  tmap_style("classic")
 ```
 
-Checking the summary statistics
+#### Cartographic furniture
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill("ECONOMY ACTIVE", 
+          style = "quantile", 
+          palette = "Blues",
+          title = "No. of persons") +
+  tm_layout(main.title = "Distribution of Economy Active Ratio \nby planning subzone",
+            main.title.position = "center",
+            main.title.size = 1.2,
+            legend.height = 0.45, 
+            legend.width = 0.35,
+            frame = TRUE) +
+  tm_borders(alpha = 0.5) +
+  tm_compass(type="8star", size = 2) +
+  tm_scale_bar(width = 0.15) +
+  tm_grid(lwd = 0.1, alpha = 0.2) +
+  tm_credits("Source: Planning Sub-zone boundary from Urban Redevelopment Authorithy (URA)\n and Population data from Department of Statistics DOS", 
+             position = c("left", "bottom"))
 ```
 
-Listing the planning subzone with the most number of preschool using top_n()
+Resetting to default style
 
 ```{r}
-
+tmap_style("white")
 ```
 
-Calculating the density of pre-school by planning subzone
+### Drawing small multiple choropleth maps
+
+Small multiple maps, aka facet maps, are composed of many maps arranged side-by-side, or stacked vertically.
+
+Small multiple maps can be plotted in three ways:
+
+\(1\) assigning multiple values to at least one aesthetic arguments;
+
+\(2\) defining group-by variable with tm_facets();
+
+\(3\) creating multiple stand-alone maps with tmap_arrange()
+
+#### Method 1: Assigning multiple values to at least one aesthetic arguments
+
+Creating small multiple maps be defining ncols in tm_fill()
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+
+  tm_fill(c("YOUNG", "AGED"),
+          style = "equal", 
+          palette = "Blues") +
+  tm_layout(legend.position = c("right", "bottom")) +
+  tm_borders(alpha = 0.5) +
+  tmap_style("white")
 ```
 
-Computing the density using mutate()
+assigning multiple values to at least one of the aesthetic arguments
 
 ```{r}
-
+tm_shape(mpsz_pop2020)+ 
+  tm_polygons(c("ECONOMY ACTIVE","AGED"),
+          style = c("equal", "quantile"), 
+          palette = list("Blues","Greens")) +
+  tm_layout(legend.position = c("right", "bottom"))
 ```
 
-## Exploratory Data Analysis
-
-Plotting a histogram to reveal distribution of PreSch Density using hist() of R Graphics
+#### Method 2: Defining group-by variable with tm_facets()
 
 ```{r}
-
+tm_shape(mpsz_pop2020) +
+  tm_fill("ECONOMY ACTIVE",
+          style = "quantile",
+          palette = "Blues",
+          thres.poly = 0) + 
+  tm_facets(by="REGION_N", 
+            free.coords=TRUE, 
+            drop.shapes=TRUE) +
+  tm_layout(legend.show = FALSE,
+            title.position = c("center", "center"), 
+            title.size = 20) +
+  tm_borders(alpha = 0.5)
 ```
 
-Using ggplot2
+#### Method 3: Creating multiple stand-alone maps with tmap_arrange()
 
 ```{r}
+youngmap <- tm_shape(mpsz_pop2020)+ 
+  tm_polygons("YOUNG", 
+              style = "quantile", 
+              palette = "Blues")
 
+agedmap <- tm_shape(mpsz_pop2020)+ 
+  tm_polygons("AGED", 
+              style = "quantile", 
+              palette = "Blues")
+
+tmap_arrange(youngmap, agedmap, asp=1, ncol=2)
 ```
 
-Plotting a scatterplot to show the relationship between Pre-School density and Pre-School Count using ggplot2
+### Mapping spatial object meeting a selection criterion
 
 ```{r}
-
+tm_shape(mpsz_pop2020[mpsz_pop2020$REGION_N=="CENTRAL REGION", ])+
+  tm_fill("ECONOMY ACTIVE", 
+          style = "quantile", 
+          palette = "Blues", 
+          legend.hist = TRUE, 
+          legend.is.portrait = TRUE,
+          legend.hist.z = 0.1) +
+  tm_layout(legend.outside = TRUE,
+            legend.height = 0.45, 
+            legend.width = 5.0,
+            legend.position = c("right", "bottom"),
+            frame = FALSE) +
+  tm_borders(alpha = 0.5)
 ```
