--- a/Hands-On_Ex/Hands-On_Ex1/Hands-On_Ex1B.qmd
+++ b/Hands-On_Ex/Hands-On_Ex1/Hands-On_Ex1B.qmd
@@ -50,19 +50,17 @@ library(dplyr)
 popdata2020 <- popdata %>%
   filter(Time == 2020) %>%
   group_by(PA, SZ, AG) %>%
-  summarise(POP = sum(Pop)) %>%
+  summarise(`POP` = sum(`Pop`)) %>%
   ungroup() %>%
   pivot_wider(names_from = AG,
               values_from = POP) %>%
-mutate('YOUNG' = rowSums(.[3:6])+rowSums(.[12])) %>%
-mutate('ECONOMY ACTIVE' = rowSums(.[7:11])+rowSums(.[13:15])) %>%
-mutate('AGED' = rowSums(.[16:21])) %>%
-mutate('TOTAL' = rowSums(.[3:21])) %>%
-#mutate('DEPENDENCY' = ('YOUNG' + 'AGED')/ 'ECONOMY ACTIVE') %>%
-  select(PA, SZ, 'YOUNG', 'ECONOMY ACTIVE', 'AGED', 'TOTAL')
+mutate(`YOUNG` = rowSums(.[3:6])+rowSums(.[12])) %>%
+mutate(`ECONOMY ACTIVE` = rowSums(.[7:11])+rowSums(.[13:15])) %>%
+mutate(`AGED` = rowSums(.[16:21])) %>%
+mutate(`TOTAL` = rowSums(.[3:21])) %>%
+mutate(`DEPENDENCY` = (`YOUNG` + `AGED`)/ `ECONOMY ACTIVE`) %>%
+  select(`PA`, `SZ`, `YOUNG`, `ECONOMY ACTIVE`, `AGED`, `TOTAL`, `DEPENDENCY`)
 ```
-
-*Problem computing DEPENDENCY, caused by error in "YOUNG" + "AGED": non-numeric argument to binary operator*
 
 #### Joining attribute data and geospatial data
 
@@ -72,7 +70,7 @@ Converting values in PA and SZ fields to uppercase
 popdata2020 <- popdata2020 %>%
   mutate_at(.vars = vars(PA, SZ),
             .funs = funs(toupper)) %>%
-  filter('ECONOMY ACTIVE' > 0)
+  filter(`ECONOMY ACTIVE` > 0)
 ```
 
 Joining geographical data and attribute table by planning subzone name using left_join(), to ensure the output is a simple features data frame
@@ -99,9 +97,16 @@ Easiest and quickest way to draw choropleth map, it is concise and provides a go
 tmap_mode("plot")
 qtm(mpsz_pop2020, 
     fill = "ECONOMY ACTIVE")
+
+
+#tmap_mode("plot")
+#qtm(mpsz_pop2020, 
+#    fill = "DEPENDENCY")
 ```
 
-*Change from DEPENDENCY to ECONOMY ACTIVE*
+*Error when fill = "DEPENDENCY": Fill argument neither colors nor valid variable name(s)*
+
+*Fill changed from DEPENDENCY to ECONOMY ACTIVE*
 
 ## Creating a choropleth map by using tmap's elements
 
