--- a/In-Class_Ex/In-Class_Ex1.qmd
+++ b/In-Class_Ex/In-Class_Ex1.qmd
@@ -180,4 +180,4 @@ k1dists <- unlist(nbdists(k1, coords, longlat = TRUE))
 summary(k1dists)
 ```
 
-***\-\-- to be continue \-\--***
+***\-\-- to be continued \-\--***
