--- a/In-Class_Ex/In-Class_Ex1.qmd
+++ b/In-Class_Ex/In-Class_Ex1.qmd
@@ -234,4 +234,277 @@ plot(hunan$geometry, border="lightgrey")
 plot(wm_d62, coords, add=TRUE, pch = 19, cex = 0.6, main="Distance link")
 ```
 
-***\-\-- to be continued \-\--***
+### Computing adaptive distance weight matrix
+
+More densely settled areas (usually urban areas) tend to have more neighbours and less densely areas (usually rural counties) tend to have less neighbours.
+
+Controlling the number of neighbours directly using k-nearest neighbours, either accepting asymmetric neighbours or imposin symmetry
+
+```{r}
+knn6 <- knn2nb(knearneigh(coords, k=6))
+knn6
+```
+
+*notice for both knearneigh() and str(), each county has EXACTLY six neighbours*
+
+```{r}
+str(knn6)
+```
+
+#### Plotting distance based neighbours
+
+Plotting weight matrix
+
+```{r}
+plot(hunan$geometry, border= "lightgrey")
+plot(knn6, coords, pch = 19, cex = 0.6, add = TRUE, col = "red")
+```
+
+## Weight based on IDW
+
+Deriving spatial weight matrix based on Inversed Distance method
+
+First, compute distances between areas using nbdists()
+
+```{r}
+dist <- nbdists(wm_q, coords, longlat = TRUE)
+ids <- lapply(dist, function(x) 1/(x))
+ids
+```
+
+### Row standardised spatial weights matrix
+
+Assigning weights to each neighbouring polygon (e.g. each neighbouring polygon will be assigned equal weight (style = "W"), by assigning fraction 1/(no. of neighbours), then summing the weighted income values
+
+Drawback in that polygons along the edges of the study area will base their lagged values on fewer polygons thus potentially over- or under- estimating the true nature of the spatial auto-correlation (other mobre robust options are available, e.g. style = "B")
+
+*zero.policy=TRUE option allows for list of non-neighbours*
+
+```{r}
+rswm_q <- nb2listw(wm_q, style = "W", zero.policy = TRUE)
+rswm_q
+```
+
+Weight of first polygon's four neighbours type. Each neighbour is assigned a 0.2 of total weight. This means that each neighbour's income will be multiplied by 0.2 before being tallied
+
+```{r}
+rswm_q$weights[10]
+```
+
+```{r}
+rswm_ids <- nb2listw(wm_q, glist = ids, style = "B", zero.policy = TRUE)
+rswm_ids
+```
+
+```{r}
+rswm_ids$weights[1]
+```
+
+```{r}
+summary(unlist(rswm_ids$weights))
+```
+
+## Application of spatial weight matrix
+
+Creating four different spatial lagged variables:
+
+-   Method 1: Spatial lag with row standardised weights
+
+-   Method 2: Spatial lag as a sum of neighbouring values
+
+-   Method 3: Spatial window average
+
+-   Method 4: Spatial window sum
+
+### Method 1: Spatial lag with row standardised weights
+
+Computing average neighbour GDPPC value for polygon (these values referred to as spatially lagged values)
+
+```{r}
+GDPPC.lag <- lag.listw(rswm_q, hunan$GDPPC)
+GDPPC.lag
+```
+
+Retrieving the GDPPC of these five counties
+
+```{r}
+nb1 <- wm_q[[1]]
+nb1 <- hunan$GDPPC[nb1]
+nb1
+```
+
+Appending the spatially lagged GDPPC values onto hunan sf data frame
+
+```{r}
+lag.list <- list(hunan$NAME_3, lag.listw(rswm_q, hunan$GDPPC))
+lag.res <- as.data.frame(lag.list)
+colnames(lag.res) <- c("NAME_3", "lag GDPPC")
+hunan <- left_join(hunan, lag.res)
+```
+
+Showing the average neighbouring income values for each county
+
+```{r}
+head(hunan)
+```
+
+Plotting both GDPPC and spatial lag GDPPC for comparison
+
+```{r}
+gdppc <- qtm(hunan, "GDPPC")
+lag_gdppc <- qtm(hunan, "lag GDPPC")
+tmap_arrange(gdppc, lag_gdppc, asp = 1, ncol=2)
+```
+
+### Method 2: Spatial lag as a sum of neighbouring values
+
+Calculating spatial lag as a sum of neighboring values by assigning binary weights
+
+Start by applying a function that will assign a value of 1 per each neighbor. using lapply
+
+```{r}
+b_weights <- lapply(wm_q, function(x) 0*x +1)
+b_weights2 <- nb2listw(wm_q, 
+                       glist = b_weights,
+                       style = "B")
+b_weights2
+```
+
+Computing a lag variable from weight and GDPPC using lag.listw
+
+```{r}
+lag_sum <- list(hunan$NAME_3, lag.listw(b_weights2, hunan$GDPPC))
+lag.res <- as.data.frame(lag_sum)
+colnames(lag.res) <- c("NAME_3", "lag_sum GDPPC")
+lag_sum
+```
+
+Appending lag_sum GDPPC into hunan sf data frame
+
+```{r}
+hunan <- left_join(hunan, lag.res)
+```
+
+Plotting GDPPC and Spatial Lag Sum GDPPC for comparison
+
+```{r}
+gdppc <- qtm(hunan, "GDPPC")
+lag_sum_gdppc <- qtm(hunan, "lag_sum GDPPC")
+tmap_arrange(gdppc, lag_sum_gdppc, asp=1, ncol=2)
+
+```
+
+### Method 3: Spatial window average
+
+Using row-standardised weights and includes the diagonal element. To begin, assign k6 to a new variable as its structure will be altered to add the diagonal elements
+
+```{r}
+wm_q1 <- wm_q
+```
+
+Adding the diagonal element to the neighbour list using include.self()
+
+```{r}
+include.self(wm_q1)
+```
+
+Obtaining weights with nb2listw()
+
+```{r}
+wm_q1 <- nb2listw(wm_q1)
+wm_q1
+```
+
+Creating the lag variable from weight structure and GDPPC variable
+
+```{r}
+lag_w_avg_gdppc <- lag.listw(wm_q1,
+                             hunan$GDPPC)
+lag_w_avg_gdppc
+```
+
+Converting lag variable listw object into a data .frame using as.data.frame()
+
+```{r}
+lag.list.wm_q1 <- list(hunan$NAME_3, lag.listw(wm_q1, hunan$GDPPC))
+lag_wm_q1.res <- as.data.frame(lag.list.wm_q1)
+colnames(lag_wm_q1.res) <- c("NAME_3", "lag_window_avg GDPPC")
+```
+
+Appending lag_window_avg GDPPC values onto hunan sf data.frame by using left_join()
+
+```{r}
+hunan <- left_join(hunan, lag_wm_q1.res)
+```
+
+PLotting GDPPC and lag_window_ave GDPPC using qtm()
+
+```{r}
+gdppc <- qtm(hunan, "GDPPC")
+w_avg_gdppc <- qtm(hunan, "lag_window_avg GDPPC")
+tmap_arrange(gdppc, w_avg_gdppc, asp=1, ncol=2)
+```
+
+### Method 4: Spatial window sum
+
+Counter part of window average, without using row-standardised weights. To do this, assign binary weights to neighbour structure that includes diagonal element
+
+```{r}
+wm_q1 <- wm_q
+```
+
+Adding diagonal element to the neighbour list using include.self()
+
+```{r}
+include.self(wm_q1)
+```
+
+```{r}
+wm_q1
+```
+
+Assigning binary weights to neighbour structure that includes diagonal element
+
+```{r}
+b_weights <- lapply(wm_q1, function (x) 0*x + 1)
+b_weights[1]
+```
+
+Explicitly assigning weight values using nb2listw() and glist()
+
+```{r}
+b_weights2 <- nb2listw(wm_q1,
+                       glist = b_weights,
+                       style = "B")
+b_weights2
+```
+
+Computing lag variable with new weight structure, using lag.listw()
+
+```{r}
+w_sum_gdppc <- list(hunan$NAME_3, lag.listw(b_weights2, hunan$GDPPC))
+w_sum_gdppc
+```
+
+Converting lag variable listw object into a data frame using as.data.frame()
+
+*Note: second command line renames the field names of w_sum_gdppc.res object into NAME_3 and w_sum GDPPC respectively*
+
+```{r}
+w_sum_gdppc.res <- as.data.frame(w_sum_gdppc)
+colnames(w_sum_gdppc.res) <- c("NAME_3", "w_sum GDPPC")
+```
+
+Appending w_sum GDPPC values onto hunan sf data.frame using left_join()
+
+```{r}
+hunan <- left_join(hunan, w_sum_gdppc.res)
+```
+
+Plotting GDPPC and lag_sum GDPPC using qtm()
+
+```{r}
+gdppc <- qtm(hunan, "GDPPC")
+w_sum_gdppc <- qtm(hunan, "w_sum GDPPC")
+tmap_arrange(gdppc, w_sum_gdppc, asp=1, ncol=2)
+```
